--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Frontend Mentor | FAQ accordion</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="faq-accordion-main/style.css">
   <script src="faq-accordion-main/script.js"></script>
 </head>
 
