--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="head">
       <table>
         <tr>
-          <td><img src='assets/images/icon-star.svg' /></td>
+          <td><img src='faq-accordion-main/assets/images/icon-star.svg' /></td>
           <td>
             <p>FAQs</p>
           </td>
