--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <p>
         Is Frontend Mentor free? </p>
       <button onclick="long(2)">
-        <img src="assets/images/icon-plus.svg" alt="" srcset="" id="plus2">
+        <img src="icon-plus.svg" alt="" srcset="" id="plus2">
       </button>
 
 
@@ -67,7 +67,7 @@
     <p>
       Can I use Frontend Mentor projects in my portfolio? </p>
     <button onclick="long(3)">
-      <img src="assets/images/icon-plus.svg" alt="" srcset="" id="plus3">
+      <img src="icon-plus.svg" alt="" srcset="" id="plus3">
     </button>
 
 
@@ -82,7 +82,7 @@
     <p>
       How can I get help if I'm stuck on a challenge? </p>
     <button onclick="long(4)">
-      <img src="assets/images/icon-plus.svg" alt="" srcset="" id="plus4">
+      <img src="icon-plus.svg" alt="" srcset="" id="plus4">
     </button>
 
 
