--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         </tr>
       </table>
     </div>
-    <div class="first">
+    <div class="first" onclick="long(1)">
       <p>
         What is Frontend Mentor, and how will it help me?
       </p>
-      <button onclick="long(1)" id="img1">
+      <button>
         <img src="icon-plus.svg" alt="" srcset="" id="plus1">
       </button>
 
@@ -44,10 +44,10 @@
 
 
 
-    <div class="first">
+    <div class="first" onclick="long(2)">
       <p>
         Is Frontend Mentor free? </p>
-      <button onclick="long(2)">
+      <button>
         <img src="icon-plus.svg" alt="" srcset="" id="plus2">
       </button>
 
@@ -63,10 +63,10 @@
 
 
 
-  <div class="first">
+  <div class="first" onclick="long(3)">
     <p>
       Can I use Frontend Mentor projects in my portfolio? </p>
-    <button onclick="long(3)">
+    <button>
       <img src="icon-plus.svg" alt="" srcset="" id="plus3">
     </button>
 
@@ -78,10 +78,10 @@
 
 
 
-  <div class="first">
+  <div class="first" onclick="long(4)">
     <p>
       How can I get help if I'm stuck on a challenge? </p>
-    <button onclick="long(4)">
+    <button>
       <img src="icon-plus.svg" alt="" srcset="" id="plus4">
     </button>
 
